# MVC_test2

./: CMakeLists.txt  README.md  financialcontroller.cpp  financialcontroller.h  financialmodel.cpp  financialmodel.h  financialwidget.cpp  logindialog.cpp  main.cpp  res.qrc  schedulecontroller.cpp  schedulecontroller.h  schedulemodel.cpp  schedulemodel.h  schedulewidget.cpp  studentcontroller.cpp  studentcontroller.h  studentinfowidget.cpp  studentmodel.cpp  studentmodel.h
